Occasional crashes in layout tests when firing the shrink-to-fit-content timer https://bugs.webkit.org/show_bug.cgi?id=197629 <rdar://problem/50514382>

Reviewed by Tim Horton.

Fixes several crashing layout tests by stopping the shrink-to-fit-content timer when the page closes.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::close):


Canonical link: https://commits.webkit.org/211776@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244993 268f45cc-cd09-0410-ab3c-d52691b4dbfc